# 2026-02-jupiter-lend

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  LICENSE  NOTICE  README-sponsor.md  README.md  out_of_scope.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  scope.txt  tsconfig.json  vitest.config.mts
__tests__/flashloan/: base.test.ts
__tests__/lending/: base.test.ts  fToken.test.ts  lrrm.test.ts
__tests__/liquidity/: base.test.ts  borrow.test.ts  borrowLimit.test.ts  claim.test.ts  liquidityYield.test.ts  operate.test.ts  payback.test.ts  supply.test.ts  withdraw.test.ts  withdrawalLimit.test.ts
__tests__/vaults/: base.test.ts  combination.test.ts  liquidate.test.ts  singlePoolVault.test.ts  stake.test.ts
cli/: build.ts  test.ts
cli/utils/: builders.ts  programs.ts
programs/flashloan/: Cargo.toml
programs/flashloan/src/: constants.rs  errors.rs  events.rs  lib.rs  validate.rs
programs/flashloan/src/invokes/: liquidity_layer.rs  mod.rs
programs/flashloan/src/state/: context.rs  seeds.rs  state.rs
programs/lending/: Cargo.toml
programs/lending/src/: constant.rs  errors.rs  events.rs  lib.rs
programs/lending/src/invokes/: f_token.rs  liquidity_layer.rs  mod.rs
programs/lending/src/module/: admin.rs  user.rs
programs/lending/src/state/: context.rs  mod.rs  seeds.rs  state.rs
programs/lending/src/utils/: deposit.rs  helpers.rs  mod.rs  rebalance.rs  withdraw.rs
programs/lendingRewardRateModel/: Cargo.toml
programs/lendingRewardRateModel/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/lendingRewardRateModel/src/invokes/: lending.rs  mod.rs
programs/lendingRewardRateModel/src/state/: context.rs  mod.rs  seeds.rs  state.rs
programs/liquidity/: Cargo.toml
programs/liquidity/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/liquidity/src/module/: admin.rs  user.rs
programs/liquidity/src/state/: context.rs  mod.rs  rate_model.rs  seeds.rs  state.rs  structs.rs  token_reserve.rs  user_borrow_position.rs  user_supply_position.rs
programs/liquidity/src/utils/: token.rs
programs/oracle/: Cargo.toml
programs/oracle/src/: constants.rs  errors.rs  events.rs  helper.rs  lib.rs
programs/oracle/src/modules/: chainlink.rs  jup_lend.rs  mod.rs  msol_pool.rs  pyth.rs  redstone.rs  single_pool.rs  stake_pool.rs
programs/oracle/src/state/: context.rs  mod.rs  schema.rs  seeds.rs  state.rs  structs.rs
programs/vaults/: Cargo.toml
programs/vaults/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/vaults/src/invokes/: liquidity_layer.rs  mint.rs  mod.rs  oracle.rs
programs/vaults/src/module/: admin.rs  mod.rs  user.rs  view.rs
programs/vaults/src/state/: branch.rs  context.rs  mod.rs  position.rs  seeds.rs  state.rs  structs.rs  tick.rs  tick_has_debt.rs  tick_id_liquidation.rs  vault_config.rs  vault_state.rs
programs/vaults/src/utils/: common.rs  mod.rs  operate.rs  validate.rs
test-utils/rust/: Cargo.toml
test-utils/rust/src/: builder.rs  errors.rs  lib.rs
test-utils/rust/src/core/: accounts.rs  mod.rs  state.rs  transactions.rs  vm.rs
test-utils/rust/src/fork/: mod.rs  provider.rs
test-utils/rust/src/helpers/: assertions.rs  fixtures.rs  lookup_table.rs  mod.rs  tokens.rs
test-utils/rust/src/internal/: compute.rs  conversions.rs  mod.rs  rpc.rs
test-utils/typescript/: accountInfo.json  baseTests.ts  bn.ts  computeBudgetLogger.ts  lookup.ts  parser.ts  tokens.ts
test-utils/typescript/flashloan/: setup.ts
test-utils/typescript/lending/: resolver.ts  setup.ts
test-utils/typescript/liquidity/: resolver.ts  setup.ts
test-utils/typescript/stake/: setup.ts
test-utils/typescript/vaults/: oracle.ts  resolver.ts  setup.ts  types.ts
tests/: Cargo.toml
tests/src/: addresses.rs  connection.rs  lib.rs
tests/src/lending/fixture/: mod.rs  setup.rs
tests/src/liquidity/: base_test.rs  borrow_limit_test.rs  borrow_test.rs  claim_test.rs  liquidity_yield_test.rs  mod.rs  operate_test.rs  payback_test.rs  supply_test.rs  withdraw_test.rs  withdrawal_limit_test.rs
tests/src/liquidity/fixture/: mod.rs  resolver.rs  setup.rs
tests/src/oracle/: chainlink.rs  jup_lend.rs  litesvm_mainnet_test.rs  mod.rs  msol.rs  redstone.rs  single_pool.rs  stake_pool.rs
tests/src/utils/: litesvm.rs  mod.rs
tests/src/vaults/: base_test.rs  combination_test.rs  liquidate_test.rs  mod.rs  vulnerability_test.rs
tests/src/vaults/fixture/: mod.rs  resolver.rs  setup.rs
ts-sdk/: address.ts  auth.ts  bigNumberMinified.ts  builder.ts  connection.ts  eventDecoder.ts  lookupTable.ts  mint.ts  tx.ts  util.ts  wrap.ts
ts-sdk/config/: index.ts  rateDataV1.ts  rateDataV2.ts  token.ts
ts-sdk/flashloan/: context.ts  pda.ts  user.ts
ts-sdk/flashloan/resolver/: resolver.ts
ts-sdk/lending/context/: context.ts  pda.ts  state.ts
ts-sdk/lending/module/: admin.ts  user.ts
ts-sdk/lending/resolver/: index.ts  rewards.ts  types.ts
ts-sdk/lendingRewardRateModel/context/: context.ts  pda.ts
ts-sdk/lendingRewardRateModel/resolver/: resolver.ts
ts-sdk/lendingRewardRateModel/types/: index.ts
ts-sdk/liquidity/: types.ts
ts-sdk/liquidity/context/: context.ts  pda.ts
ts-sdk/liquidity/module/: admin.ts  user.ts
ts-sdk/liquidity/resolver/: index.ts  resolver.ts  types.ts
ts-sdk/oracle/: feeds.ts  index.ts
ts-sdk/vault/config/: vault.ts
ts-sdk/vault/context/: context.ts  contextProd.ts  lookup.ts  pda.ts  state.ts
ts-sdk/vault/math/: tickMath.ts
ts-sdk/vault/module/: admin.ts  user.ts
ts-sdk/vault/resolver/: index.ts  resolver.ts  rewards.ts  types.ts
