[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { version="=0.32.0", features=["init-if-needed"] }
oracle = { path = "../programs/oracle" }
liquidity = { path = "../programs/liquidity" }
lending = { path = "../programs/lending", features=["no-entrypoint"] }
lending_reward_rate_model = { path = "../programs/lendingRewardRateModel", features=["no-entrypoint"] }
vaults = { path = "../programs/vaults" }
library = { path = "../crates/library" }
mpl-token-metadata = "5.1.0"
fluid-test-framework = { path = "../test-utils/rust" }
solana-client = "2.0.17"
solana-sdk = "2.0.17"
solana-program = "2.0.17"
spl-token = "8.0.0"
spl-associated-token-account = "7.0"
spl-stake-pool = "2.0.3"
solana-stake-interface = "2.0.2"
tokio = { version = "1.0", features = ["full"] }
chainlink_solana = "2.0.8"
litesvm = "0.8.2"
solana-account = "3.0"
solana-pubkey = "3.0"
solana-message = "3.0"
solana-transaction = "3.0"
solana-instruction = "3.0"
solana-keypair = "3.0"
solana-clock = "3.0"
solana-compute-budget = "3.0.12"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
bytemuck = "1.20.0"
base64 = "0.22"