[package]
name = "flashloan"
version = "0.1.2"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flashloan"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version="=0.32.0", features=["init-if-needed"] }
anchor-spl = {version="=0.32.0", features=["metadata"]}
spl-token = "8.0.0"
solana-program = "2.3.0"
num-traits = "0.2"
mpl-token-metadata = "5.1.0"
library = { path="../../crates/library" }
liquidity = { path = "../liquidity", features = ["cpi"] }