[package]
name = "lending_reward_rate_model"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lending_reward_rate_model"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version="=0.32.0", features=["init-if-needed"] }
anchor-spl = "=0.32.0"
num-traits = "0.2"
spl-token = "8.0.0"
library = { path="../../crates/library" }