[package]
name = "oracle"
version = "0.1.2"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "oracle"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version="=0.32.0", features=["init-if-needed"] }
anchor-spl = "=0.32.0"
spl-token = "8.0.0"
solana-program = "2.3.0"
pyth-solana-receiver-sdk = "1.0.1"
library = { path="../../crates/library" }
spl-stake-pool = "2.0.3"
chainlink_solana = "2.0.8"
spl-single-pool = { version = "3.0.0", features = ["no-entrypoint"] }
lending = { path = "../lending" ,features = ["cpi"]}
liquidity = { path = "../liquidity", features = ["cpi"] }
lending_reward_rate_model = { path = "../lendingRewardRateModel", features = ["cpi"] }