[package]
name = "vaults"
version = "0.1.2"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vaults"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version="=0.32.0", features=["init-if-needed"] }
anchor-spl = "=0.32.0"
spl-token = "8.0.0"
num-traits = "0.2"
mpl-token-metadata = "5.1.0"
library = { path="../../crates/library" }
oracle = { path = "../oracle", features = ["cpi"] }
liquidity = { path = "../liquidity", features = ["cpi"] }
bytemuck = { version = "1.20.0", features = ["min_const_generics"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(exe)'] }