[package]
name = "fluid-test-framework"
version = "0.1.0"
edition = "2021"
description = "A Foundry-like testing framework for Fluid Solana programs using LiteSVM"
license = "BUSL-1.1"

[lib]
crate-type = ["lib"]
name = "fluid_test_framework"

[features]
default = []
# fuzz = ["proptest"] # maybe for future upgrades

[dependencies]
anchor-lang = { version = "0.32.0", features = ["init-if-needed"] }
anchor-spl = "0.32.0"
solana-sdk = "2.0.17"
solana-program = ">1.16.18"
solana-client = "2.0.17"
spl-token = "8.0.0"
spl-associated-token-account = "7.0"
solana-compute-budget = "3.0.12"
solana-system-interface = "3.0.0"
litesvm = "0.8.2"
solana-account = "3.0"
solana-pubkey = "3.0"
solana-message = "3.0"
solana-transaction = "3.0"
solana-instruction = "3.0"
solana-keypair = "3.0"
solana-clock = "3.0"
bincode = "1.3"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
chrono = "0.4"
dashmap = "5.5"
dotenv = "0.15"
tracing = "0.1"
serde_json = "1.0"